# KubeMin-Agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cli.py  config.py  environment.yml  kubemin-agent-enterprise-architecture-and-roadmap.md  pyproject.toml  requirements.txt
.agent/kubemin-agent-code/: SKILL.md
.github/workflows/: ci.yml
agent_core/: __init__.py  loop.py  provider.py  session.py  tools.py
app/: main.py
docs/: agent-evaluation-observability-plan.md  agent-toolsets-plan.md  arch-control-plane-sandbox.md  arch-game-audit-agent.md  arch-general-agent.md  arch-k8s-agent.md  arch-memory-system.md  arch-workflow-agent.md  context-engineering.md  design-and-implementation-plan.md  design-fsm-path-execution.md  game-audit-agent.md  game-test-agent.md  next-iteration-plan.md  refactor-implementation-plan.md  research-claude-code-agent.md  research-hermes-agent.md  research-openclaw-agent.md  skills-spec.md  spec-cli-draft.md  spec-phase1-application-json.md  spec-try-error-fixup.md  加强需求表单-2026-03-25.md
examples/: run_game_audit.py
kubemin_agent/: __init__.py  __main__.py
model/: schemas.py
runtime/: run_store.py
scripts/: check_module_coverage.py
tests/: test_agent_context.py  test_agent_loop.py  test_agent_loop_context_budget.py  test_agent_session.py  test_agent_skills_injection.py  test_agent_tools.py  test_audit.py  test_base_agent_context_budget.py  test_bus_queue.py  test_channel_feishu.py  test_channel_manager.py  test_channel_telegram.py  test_cli.py  test_cli_logs.py  test_cli_ui.py  test_config_loader.py  test_cron_service.py  test_evaluation.py  test_game_audit_assert.py  test_game_audit_chaos.py  test_game_audit_hitl.py  test_game_audit_memory.py  test_game_audit_models.py  test_game_audit_regression_gate.py  test_heartbeat.py  test_kubemin_cli_tool.py  test_main_entrypoint.py  test_mcp_client.py  test_memory_backends.py  test_memory_builtin.py  test_memory_chroma.py  test_memory_dream.py  test_memory_manager_tools.py  test_memory_session_index.py  test_orchestrator.py  test_patrol_agent.py  test_provider_litellm.py  test_runtime.py  test_runtime_identity.py  test_sandbox_egress.py  (+17 more)
(+124 files in other folders)
