[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubemin-agent"
version = "0.1.0"
description = "Agent control plane foundation for the KubeMin ecosystem"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["kubemin_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
